tests/baselines/reference/functionOverloads3.errors.txt
==== tests/cases/compiler/functionOverloads3.ts (1 errors) ====
    function foo():string;
    ~~~~~~~~
!!! functionOverloads3.ts(1,1): error TS1041: Function implementation expected.